syntax = "proto3";
package pb;
option go_package="/pb";


message VerifyEmailRequest{
  int64 email_id=1;
  string secret=2;
}
message VerifyEmailResponse{
  bool is_verified=1;
}